# cardano-aftermarket

./: Benchmarks.md  CHANGELOG.md  GettingStarted.md  README.md  cabal.project  cardano-aftermarket.cabal
aiken/: aiken.toml  plutus.json
aiken/lib/cardano-aftermarket/: market_utxo_validation.ak  observer_validation.ak  payment_validation.ak  utils.ak
aiken/lib/cardano-aftermarket/data/: core.ak  datums.ak  redeemers.ak
aiken/lib/cardano-aftermarket/observer_validation/: claim_bid_acceptance_validation.ak  claim_validation.ak  spot_bid_acceptance_validation.ak  spot_purchase_validation.ak  unlock_validation.ak
aiken/validators/: cardano-aftermarket.ak
app/: Main.hs
app/CLI/: Parsers.hs  Query.hs  Run.hs
app/CLI/Data/: Asset.hs  Bech32Address.hs  Commands.hs  MarketUTxO.hs  PersonalUTxO.hs
app/CLI/Query/: Koios.hs
scripts/local-node/: accept-bid.sh  accept-claim-bid.sh  accept-spot-bid.sh  claim-accepted-bid.sh  close-auction.sh  close-bid.sh  close-spot.sh  create-auction.sh  create-bid.sh  create-claim-bid.sh  create-spot-bid.sh  create-spot.sh  purchase-spot.sh  unlock-unclaimed.sh
scripts/local-node/create-reference-scripts/: create-beacons-reference-script.sh  create-market-reference-script.sh  create-observer-reference-script.sh  create-payment-reference-script.sh  create-proxy-reference-script.sh  register-scripts.sh
scripts/local-node/mint-test-tokens/: mint.sh
src/: CardanoAftermarket.hs
src/CardanoAftermarket/: Blueprints.hs  Types.hs  Utils.hs
test/: Test.hs
test/Test/: AcceptedBidUTxOs.hs  AuctionUTxOs.hs  Beacons.hs  BidUTxOs.hs  ClaimBidUTxOs.hs  Misc.hs  Prelude.hs  SpotBidUTxOs.hs  SpotUTxOs.hs
test/Test/AcceptedBidUTxOs/: ClaimAcceptedBidUTxOs.hs  CreateAcceptedBidUTxOs.hs  UnlockAcceptedBidUTxOs.hs
test/Test/AcceptedBidUTxOs/ClaimAcceptedBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AcceptedBidUTxOs/CreateAcceptedBidUTxOs/: Failures.hs
test/Test/AcceptedBidUTxOs/UnlockAcceptedBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AuctionUTxOs/: CloseAuctionUTxOs.hs  CreateAuctionUTxOs.hs  UpdateAuctionUTxOs.hs
test/Test/AuctionUTxOs/CloseAuctionUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AuctionUTxOs/CreateAuctionUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/AuctionUTxOs/UpdateAuctionUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/BidUTxOs/: AcceptBidUTxOs.hs  CloseBidUTxOs.hs  CreateBidUTxOs.hs  UpdateBidUTxOs.hs
test/Test/BidUTxOs/AcceptBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/BidUTxOs/CloseBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/BidUTxOs/CreateBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/BidUTxOs/UpdateBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ClaimBidUTxOs/: AcceptClaimBidUTxOs.hs  CloseClaimBidUTxOs.hs  CreateClaimBidUTxOs.hs  UpdateClaimBidUTxOs.hs
test/Test/ClaimBidUTxOs/AcceptClaimBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ClaimBidUTxOs/CloseClaimBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ClaimBidUTxOs/CreateClaimBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/ClaimBidUTxOs/UpdateClaimBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotBidUTxOs/: AcceptSpotBidUTxOs.hs  CloseSpotBidUTxOs.hs  CreateSpotBidUTxOs.hs  UpdateSpotBidUTxOs.hs
test/Test/SpotBidUTxOs/AcceptSpotBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotBidUTxOs/CloseSpotBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotBidUTxOs/CreateSpotBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotBidUTxOs/UpdateSpotBidUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotUTxOs/: CloseSpotUTxOs.hs  CreateSpotUTxOs.hs  PurchaseSpotUTxOs.hs  UpdateSpotUTxOs.hs
test/Test/SpotUTxOs/CloseSpotUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotUTxOs/CreateSpotUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotUTxOs/PurchaseSpotUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
test/Test/SpotUTxOs/UpdateSpotUTxOs/: Benchmarks.hs  Failures.hs  Regressions.hs
