cabal-version:      3.0
name:               cardano-aftermarket
version:            1.0.0.0

synopsis: A distributed Cardano P2P aftermarket for financial assets.
license:            Apache-2.0
license-file:       LICENSE
author:             fallen-icarus
maintainer:         modern.daidalos+github@gmail.com
copyright: 2024 fallen-icarus
extra-doc-files:    CHANGELOG.md
extra-source-files:
    aiken/plutus.json

common lang
  build-depends: base
  default-language: GHC2021
  ghc-options: -Wall -Wredundant-constraints
  default-extensions:
    OverloadedLabels
    OverloadedStrings
    RecordWildCards

common internals
  build-depends:
      cardano-api
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-core
    , plutus-script-utils
    , containers
    , aeson
    , text
    , bytestring
    , prettyprinter
    , relude
    , optics-core

library
  import: 
      lang
    , internals
  exposed-modules: 
      CardanoAftermarket
    , CardanoAftermarket.Blueprints
    , CardanoAftermarket.Types
    , CardanoAftermarket.Utils
  build-depends:
      serialise
    , file-embed
    , base16-bytestring
    , optics-th
    , cardano-loans
    , microlens
  hs-source-dirs: src

test-suite cardano-aftermarket-tests
  import: 
      lang
    , internals
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  other-modules:
      Test.AcceptedBidUTxOs
    , Test.AcceptedBidUTxOs.ClaimAcceptedBidUTxOs
    , Test.AcceptedBidUTxOs.ClaimAcceptedBidUTxOs.Benchmarks
    , Test.AcceptedBidUTxOs.ClaimAcceptedBidUTxOs.Failures
    , Test.AcceptedBidUTxOs.ClaimAcceptedBidUTxOs.Regressions
    , Test.AcceptedBidUTxOs.CreateAcceptedBidUTxOs
    , Test.AcceptedBidUTxOs.CreateAcceptedBidUTxOs.Failures
    , Test.AcceptedBidUTxOs.UnlockAcceptedBidUTxOs
    , Test.AcceptedBidUTxOs.UnlockAcceptedBidUTxOs.Benchmarks
    , Test.AcceptedBidUTxOs.UnlockAcceptedBidUTxOs.Failures
    , Test.AcceptedBidUTxOs.UnlockAcceptedBidUTxOs.Regressions
    , Test.AuctionUTxOs
    , Test.AuctionUTxOs.CloseAuctionUTxOs
    , Test.AuctionUTxOs.CloseAuctionUTxOs.Benchmarks
    , Test.AuctionUTxOs.CloseAuctionUTxOs.Failures
    , Test.AuctionUTxOs.CloseAuctionUTxOs.Regressions
    , Test.AuctionUTxOs.CreateAuctionUTxOs
    , Test.AuctionUTxOs.CreateAuctionUTxOs.Benchmarks
    , Test.AuctionUTxOs.CreateAuctionUTxOs.Failures
    , Test.AuctionUTxOs.CreateAuctionUTxOs.Regressions
    , Test.AuctionUTxOs.UpdateAuctionUTxOs
    , Test.AuctionUTxOs.UpdateAuctionUTxOs.Benchmarks
    , Test.AuctionUTxOs.UpdateAuctionUTxOs.Failures
    , Test.AuctionUTxOs.UpdateAuctionUTxOs.Regressions
    , Test.Beacons
    , Test.ClaimBidUTxOs
    , Test.ClaimBidUTxOs.AcceptClaimBidUTxOs
    , Test.ClaimBidUTxOs.AcceptClaimBidUTxOs.Benchmarks
    , Test.ClaimBidUTxOs.AcceptClaimBidUTxOs.Failures
    , Test.ClaimBidUTxOs.AcceptClaimBidUTxOs.Regressions
    , Test.ClaimBidUTxOs.CloseClaimBidUTxOs
    , Test.ClaimBidUTxOs.CloseClaimBidUTxOs.Benchmarks
    , Test.ClaimBidUTxOs.CloseClaimBidUTxOs.Failures
    , Test.ClaimBidUTxOs.CloseClaimBidUTxOs.Regressions
    , Test.ClaimBidUTxOs.CreateClaimBidUTxOs
    , Test.ClaimBidUTxOs.CreateClaimBidUTxOs.Benchmarks
    , Test.ClaimBidUTxOs.CreateClaimBidUTxOs.Failures
    , Test.ClaimBidUTxOs.CreateClaimBidUTxOs.Regressions
    , Test.ClaimBidUTxOs.UpdateClaimBidUTxOs
    , Test.ClaimBidUTxOs.UpdateClaimBidUTxOs.Benchmarks
    , Test.ClaimBidUTxOs.UpdateClaimBidUTxOs.Failures
    , Test.ClaimBidUTxOs.UpdateClaimBidUTxOs.Regressions
    , Test.SpotBidUTxOs
    , Test.SpotBidUTxOs.AcceptSpotBidUTxOs
    , Test.SpotBidUTxOs.AcceptSpotBidUTxOs.Benchmarks
    , Test.SpotBidUTxOs.AcceptSpotBidUTxOs.Failures
    , Test.SpotBidUTxOs.AcceptSpotBidUTxOs.Regressions
    , Test.SpotBidUTxOs.CloseSpotBidUTxOs
    , Test.SpotBidUTxOs.CloseSpotBidUTxOs.Benchmarks
    , Test.SpotBidUTxOs.CloseSpotBidUTxOs.Failures
    , Test.SpotBidUTxOs.CloseSpotBidUTxOs.Regressions
    , Test.SpotBidUTxOs.CreateSpotBidUTxOs
    , Test.SpotBidUTxOs.CreateSpotBidUTxOs.Benchmarks
    , Test.SpotBidUTxOs.CreateSpotBidUTxOs.Failures
    , Test.SpotBidUTxOs.CreateSpotBidUTxOs.Regressions
    , Test.SpotBidUTxOs.UpdateSpotBidUTxOs
    , Test.SpotBidUTxOs.UpdateSpotBidUTxOs.Benchmarks
    , Test.SpotBidUTxOs.UpdateSpotBidUTxOs.Failures
    , Test.SpotBidUTxOs.UpdateSpotBidUTxOs.Regressions
    , Test.Misc
    , Test.Prelude
    , Test.SpotUTxOs
    , Test.SpotUTxOs.CloseSpotUTxOs
    , Test.SpotUTxOs.CloseSpotUTxOs.Benchmarks
    , Test.SpotUTxOs.CloseSpotUTxOs.Failures
    , Test.SpotUTxOs.CloseSpotUTxOs.Regressions
    , Test.SpotUTxOs.CreateSpotUTxOs
    , Test.SpotUTxOs.CreateSpotUTxOs.Benchmarks
    , Test.SpotUTxOs.CreateSpotUTxOs.Failures
    , Test.SpotUTxOs.CreateSpotUTxOs.Regressions
    , Test.SpotUTxOs.PurchaseSpotUTxOs
    , Test.SpotUTxOs.PurchaseSpotUTxOs.Benchmarks
    , Test.SpotUTxOs.PurchaseSpotUTxOs.Failures
    , Test.SpotUTxOs.PurchaseSpotUTxOs.Regressions
    , Test.SpotUTxOs.UpdateSpotUTxOs
    , Test.SpotUTxOs.UpdateSpotUTxOs.Benchmarks
    , Test.SpotUTxOs.UpdateSpotUTxOs.Failures
    , Test.SpotUTxOs.UpdateSpotUTxOs.Regressions

  build-depends:
      cardano-aftermarket
    , data-default
    , tasty
    , tasty-hunit
    , mtl
    , microlens
    , cardano-node-emulator
    , optics-extra

executable cardano-aftermarket
  import: 
      lang
    , internals
  main-is: Main.hs
  other-modules:
      CLI.Data.ApiService
    , CLI.Data.Asset
    , CLI.Data.Bech32Address
    , CLI.Data.Commands
    , CLI.Data.Network
    , CLI.Data.MarketUTxO
    , CLI.Data.Output
    , CLI.Data.PersonalUTxO
    , CLI.Data.TxCBOR
    , CLI.Parsers
    , CLI.Query
    , CLI.Query.Koios
    , CLI.Run
  build-depends:    
      cardano-aftermarket
    , cardano-addresses
    , optparse-applicative
    , servant
    , servant-client
    , http-client
    , http-client-tls
    , vector
    , aeson-pretty
    , prettyprinter-ansi-terminal
  hs-source-dirs: app
  default-extensions:
    NoImplicitPrelude
